--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 
 html {
     margin: 15px 25px ;
+    background-color: #DFDBE5;
+background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'%3E%3Cg fill='%239C92AC' fill-opacity='0.21'%3E%3Cpath fill-rule='evenodd' d='M0 0h4v4H0V0zm4 4h4v4H4V4z'/%3E%3C/g%3E%3C/svg%3E");
 } 
 
 body {
@@ -30,12 +32,39 @@ h5 {
     text-align: center;
 }
 
+footer {
+    background-color: darkslategray;
+    padding: 10px;
+}
+
 #aboutMe {
     border-bottom: thin solid black;
     
 }
 
-#part1About {
+#part1About, #part2About {
     font-size: large;
+    background-color: whitesmoke;
+    padding: 8px;
+    border-radius: 5px;
 }
 
+#linkedin, #soverflow, #github {
+    width: 5%;
+    margin-left: 10px;
+}
+
+#connect span {
+    border-bottom: thin solid black;
+    font-size: large;
+    font-style: italic;
+    margin-left: 10px;
+}
+
+aside {
+    background-color: whitesmoke;
+    text-align: center;
+    max-width: 600px;
+    float: right;
+    
+}
