--- a/styles.css
+++ b/styles.css
@@ -1,31 +1,44 @@
 
 html {
-    margin: 15px 25px ;
     background-color: #DFDBE5;
-background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'%3E%3Cg fill='%239C92AC' fill-opacity='0.21'%3E%3Cpath fill-rule='evenodd' d='M0 0h4v4H0V0zm4 4h4v4H4V4z'/%3E%3C/g%3E%3C/svg%3E");
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'%3E%3Cg fill='%239C92AC' fill-opacity='0.21'%3E%3Cpath fill-rule='evenodd' d='M0 0h4v4H0V0zm4 4h4v4H4V4z'/%3E%3C/g%3E%3C/svg%3E");
 } 
 
 body {
     max-width: 800px;
     margin: auto;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
+} 
+
+main { 
+    background-color: whitesmoke;
+    border-radius: 5px;
+    padding: 5px;
+    margin-bottom: 25px;
 }
+
+
 
 header, h1, nav, a {
 display: inline-block;
-
+background-color: whitesmoke;
+margin-bottom: 20px;
+padding: 5px;
 
 }
 
 #navbar {
-    padding-left: 360px;
+    text-align: right;
+    margin-left: 250px;
+
 }
 
 #nickphoto {
     max-width: 25%;
     float: left;
     padding-right: 15px;
-    padding-bottom: 15px;
+    padding-bottom: 10px;
 }
 
 h5 {
@@ -35,10 +48,12 @@ h5 {
 footer {
     background-color: darkslategray;
     padding: 10px;
+    clear: left;
 }
 
 #aboutMe {
     border-bottom: thin solid black;
+    background-color: whitesmoke;
     
 }
 
@@ -47,10 +62,12 @@ footer {
     background-color: whitesmoke;
     padding: 8px;
     border-radius: 5px;
+    padding-top: 0px;
+
 }
 
 #linkedin, #soverflow, #github {
-    width: 5%;
+    width: 15%;
     margin-left: 10px;
 }
 
@@ -64,7 +81,26 @@ footer {
 aside {
     background-color: whitesmoke;
     text-align: center;
-    max-width: 600px;
-    float: right;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px;
+    margin-left: 85px;
+    border-radius: 5px;
+    max-width: 190px;
+    float: left;
     
 }
+
+/*aside, main {
+    float: left;
+    width: 50%;
+    
+} */
+
+main {
+    float: left;
+    width: 60%;
+}
+
+
+
