--- a/styles.css
+++ b/styles.css
@@ -5,33 +5,46 @@ html {
 } 
 
 body {
-    max-width: 800px;
+   /* max-width: 800px; */
     margin: auto;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
 } 
 
 main { 
+    max-width: 900px;
     background-color: whitesmoke;
     border-radius: 5px;
     padding: 5px;
     margin-bottom: 25px;
+    margin-left: 85px;
+    margin-right: 75px;
 }
 
-
+header {
+    width: 100%;
+    
+}
 
 header, h1, nav, a {
 display: inline-block;
 background-color: whitesmoke;
 margin-bottom: 20px;
-padding: 5px;
+padding-left: 2px;
 
 }
 
 #navbar {
     text-align: right;
-    margin-left: 250px;
+    float: right;
+    margin-top: 35px;
+    margin-right: 100px;
+    /*margin-left: 450px;*/
 
+}
+
+h1 {
+    padding-left: 85px;
 }
 
 #nickphoto {
@@ -49,6 +62,10 @@ footer {
     background-color: darkslategray;
     padding: 10px;
     clear: left;
+    width: 100%;
+    
+   
+    
 }
 
 #aboutMe {
@@ -85,10 +102,13 @@ aside {
     margin-left: auto;
     margin-right: auto;
     padding: 10px;
-    margin-left: 85px;
+    margin-left: 45px;
     border-radius: 5px;
     max-width: 190px;
-    float: left;
+    float: right;
+    margin-right: 165px;
+    
+
     
 }
 
@@ -100,7 +120,7 @@ aside {
 
 main {
     float: left;
-    width: 60%;
+    width: 50%;
 }
 
 
